@startuml
Title Domænemodel

hide circle
hide methods

class Sælger {
    medarbejder nummer
    navn
    kodeord
}

class Carport {
    varenummer
    navn
    type
    højde
    bredde
    beskrivelse
    pris
}

class Skur {
    varenummer
    navn
    højde
    bredde
    beskrivelse
    pris
}

class Kunde {
    navn
    address
    psot nummer
    by
    tlf nummer
    email
}

class Bestilling {
    ordrenumer
    tidspunkt
    info
    status
    aktiv
}

class Stykliste {
    varenummer
    navn
    antal
}

class Materiale {
    varenummer
    navn
    styk/meter pris
}

Bestilling "*" -- "1" Carport
Bestilling "*" -- "1" Skur
Bestilling "*" -- "1" Kunde
Carport "*" -- "1" Stykliste
Skur "*" -- "1" Stykliste
Stykliste "1" -- "*" Materiale





@enduml